--- a/style.css
+++ b/style.css
@@ -500,7 +500,11 @@ article .content {
 }
 
 .entry-content {
-	font-size: 16px;
+	font-size: 18px;
+}
+
+article h2 {
+	color: #4c4c4c !important;
 }
 
 
