--- a/style.css
+++ b/style.css
@@ -547,11 +547,11 @@ article {
 	padding-bottom: 60px;
 }
 
-article ul.shareaholic-share-buttons {
+article .shareaholic-share-buttons-container .shareaholic-ui ul.shareaholic-share-buttons {
 	margin: 0 !important;
 }
 
-article ul.shareaholic-share-buttons > li:first-child {
+article .shareaholic-share-buttons-container .shareaholic-ui ul.shareaholic-share-buttons > li:first-child {
 	padding-left: 0 !important;
 }
 
@@ -579,17 +579,17 @@ form.searchandfilter h3{
 }
 
 @media (max-width: 1100px){
-	.blog section.content {
+	.blog .section.content {
 		width: 80%;
 	}
 }
 
 @media (max-width: 750px){
-	.blog section.content .left-side {
+	.blog .section.content .left-side {
 		width: 100%;
 		padding-right: 0;
 	}
-	.blog section.content .right-side {
+	.blog .section.content .right-side {
 		width: 100%;
 	}
 	article .content {
