--- a/style.css
+++ b/style.css
@@ -243,6 +243,60 @@ animation: BgAnimation 29s ease infinite;
 .projects .content .item {
 	width: 100% !important;
 	height: 300px !important;
+	cursor: pointer;
+}
+
+.projects .item-content {
+	overflow: hidden;
+	max-height: 0;
+	transition: max-height 1s;
+	
+}
+
+.projects .item-content .image img {
+	width: 100%;
+	height: auto;
+	margin-bottom: 30px;
+}
+
+.projects .item-content .image {
+	float: left;
+}
+
+.projects .item-content .text {
+	padding-left: 50px;
+	float: left;
+}
+
+@media (max-width: 990px){
+	.projects .item-content .text {
+		padding-left: 15px;
+	}
+}
+
+.projects .item-content .text h2 {
+	margin-top: 0;
+	margin-bottom: 20px;
+	color: #333 !important;
+	display: inline-block;
+}
+
+.projects .item-content .text .glyphicon {
+	float: right;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.projects .item-content .text p{
+	font-size: 16px;
+	font-weight: 300;
+	margin-bottom: 40px;
+}
+
+.projects .item-content .text a {
+	font-family: 'Lato', serif;
+	font-size: 16px;
+	font-style: italic;
 }
 
 .projects .content .row .col-lg-6 {
@@ -250,17 +304,13 @@ animation: BgAnimation 29s ease infinite;
 }
 
 .projects .content h2 {
-	color: #ffce00 !important;
 	font-size: 26px;
-}
-
-.projects .content p {
-	font-size: 14px !important;
-	line-height: 1.6 !important;
 }
 
 .projects .content .item img{
 	border-radius: 3px;
+	width: 100%;
+	height: auto !important;
 }
 
 .projects .content .item:hover img{
